--- a/.isort.cfg
+++ b/.isort.cfg
@@ -12,5 +12,10 @@ lines_between_types = 0
 use_parentheses = True
 remove_redundant_aliases = True
 default_section = THIRDPARTY
-known_third_party = domdf_python_tools, github, matplotlib, requests
+known_third_party =
+    domdf_python_tools
+    github
+    matplotlib
+    requests
+    typing_extensions
 known_first_party = domplotlib
