--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -2,5 +2,6 @@ include __pkginfo__.py
 include LICENSE
 include requirements.txt
 prune **/__pycache__
+include domplotlib/styles/domdf.mplstyle
 recursive-include domplotlib *.pyi
 include domplotlib/py.typed
