--- a/setup.cfg
+++ b/setup.cfg
@@ -17,6 +17,7 @@ long_description_content_type = text/x-rst
 platforms = Windows, macOS, Linux
 url = https://github.com/domdfcoding/domplotlib
 project_urls =
+    Documentation = https://domplotlib.readthedocs.io
     Issue_Tracker = https://github.com/domdfcoding/domplotlib/issues
     Source_Code = https://github.com/domdfcoding/domplotlib
 classifiers =
