--- a/.isort.cfg
+++ b/.isort.cfg
@@ -13,9 +13,15 @@ use_parentheses = True
 remove_redundant_aliases = True
 default_section = THIRDPARTY
 known_third_party =
+    coverage
+    coverage_pyver_pragma
     domdf_python_tools
     github
     matplotlib
+    pytest
+    pytest_cov
+    pytest_randomly
+    pytest_timeout
     requests
     typing_extensions
 known_first_party = domplotlib
