--- a/.github/workflows/python_ci_linux.yml
+++ b/.github/workflows/python_ci_linux.yml
@@ -34,11 +34,61 @@ jobs:
           python -m site
           python -m pip install --upgrade pip setuptools wheel
           python -m pip install --upgrade tox tox-gh-actions virtualenv
+          python -m pip install --upgrade coverage_pyver_pragma
 
       - name: "Run Tests for Python ${{ matrix.python-version }}"
         run: "python -m tox"
 
 
+      - name: "Upload Coverage"
+        uses: actions/upload-artifact@v2
+        with:
+          name: "coverage-${{ matrix.python-version }}"
+          path: .coverage
+
+
+  Coverage:
+    needs: tests
+    runs-on: "ubuntu-18.04"
+    steps:
+      - name: Checkout 🛎️
+        uses: "actions/checkout@v2"
+
+      - name: Setup Python 🐍
+        uses: "actions/setup-python@v2"
+        with:
+          python-version: 3.8
+
+      - name: Install dependencies 🔧
+        run: |
+          python -m pip install --upgrade pip setuptools wheel
+          python -m pip install --upgrade coveralls coverage_pyver_pragma
+
+      - name: "Download Coverage"
+        uses: actions/download-artifact@v2
+        with:
+          path: coverage
+
+      - name: Display structure of downloaded files
+        run: ls -R
+        working-directory: coverage
+
+      - name: Combine Coverage
+        run: |
+          shopt -s globstar
+          python -m coverage combine coverage/**/.coverage
+
+      - name: "Upload Combined Coverage Artefact"
+        uses: actions/upload-artifact@v2
+        with:
+          name: "combined-coverage"
+          path: .coverage
+
+      - name: "Upload Combined Coverage to Coveralls"
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: |
+          coveralls
 
   Deploy:
     needs: tests
