--- a/tox.ini
+++ b/tox.ini
@@ -25,6 +25,7 @@ isolated_build = True
 [envlists]
 test = py36, py37, py38, py39
 qa = mypy, lint
+cov = py36, coverage
 
 [gh-actions]
 python =
@@ -37,7 +38,10 @@ python =
 setenv =
     PIP_USE_FEATURE = 2020-resolver
     PYTHONDEVMODE = 1
-commands = python --version
+deps = -r{toxinidir}/tests/requirements.txt
+commands =
+    python --version
+    python -m pytest --cov=domplotlib -r aR tests/ {posargs}
 
 [testenv:docs]
 setenv = SHOW_TODOS = 1
@@ -82,7 +86,7 @@ deps =
     git+https://github.com/domdfcoding/flake8-rst-docstrings.git
     git+https://github.com/domdfcoding/flake8-rst-docstrings-sphinx.git@v2
     pygments>=2.7.1
-commands = python3 -m flake8_rst_docstrings_sphinx domplotlib --allow-toolbox {posargs}
+commands = python3 -m flake8_rst_docstrings_sphinx domplotlib tests --allow-toolbox {posargs}
 
 [testenv:mypy]
 basepython = python3.6
@@ -91,7 +95,8 @@ changedir = {toxinidir}
 deps =
     mypy==0.790
     lxml
-commands = mypy domplotlib {posargs}
+    -r{toxinidir}/tests/requirements.txt
+commands = mypy domplotlib tests {posargs}
 
 [testenv:pyup]
 basepython = python3.6
@@ -99,7 +104,21 @@ skip_install = True
 ignore_errors = True
 changedir = {toxinidir}
 deps = pyupgrade-directories
-commands = pyup_dirs domplotlib --py36-plus --recursive
+commands = pyup_dirs domplotlib tests --py36-plus --recursive
+
+[testenv:coverage]
+basepython = python3.6
+skip_install = True
+ignore_errors = True
+whitelist_externals = /bin/bash
+changedir = {toxinidir}
+deps =
+    coverage>=5
+    coverage_pyver_pragma>=0.0.6
+commands =
+    /bin/bash -c "rm -rf htmlcov"
+    coverage html
+    /bin/bash -c "DISPLAY=:0 firefox 'htmlcov/index.html'"
 
 [flake8]
 max-line-length = 120
@@ -137,5 +156,6 @@ toplevel = domplotlib
 package = domplotlib
 
 [pytest]
-addopts = --color yes --durations 25
+addopts = --color yes --durations 25 --mpl
 timeout = 300
+markers = mpl_image_compare
