Fix type hints.

--- a/.isort.cfg
+++ b/.isort.cfg
@@ -20,6 +20,7 @@ known_third_party =
     matplotlib
     pytest
     pytest_cov
+    pytest_mpl
     pytest_randomly
     pytest_timeout
     requests
