--- a/tox.ini
+++ b/tox.ini
@@ -14,7 +14,6 @@
 #     * coverage:run
 #     * coverage:report
 #     * check-wheel-contents
-#     * pytest
 
 [tox]
 envlist = py36, py37, py38, py39, mypy, build
@@ -96,6 +95,7 @@ deps =
     mypy==0.790
     lxml
     -r{toxinidir}/tests/requirements.txt
+    -r{toxinidir}/stubs.txt
 commands = mypy domplotlib tests {posargs}
 
 [testenv:pyup]
