--- a/setup.cfg
+++ b/setup.cfg
@@ -17,9 +17,9 @@ long_description_content_type = text/x-rst
 platforms = Windows, macOS, Linux
 url = https://github.com/domdfcoding/domplotlib
 project_urls =
-    Documentation = https://domplotlib.readthedocs.io
-    Issue_Tracker = https://github.com/domdfcoding/domplotlib/issues
-    Source_Code = https://github.com/domdfcoding/domplotlib
+    Documentation = https://domplotlib.readthedocs.io/en/latest
+    Issue Tracker = https://github.com/domdfcoding/domplotlib/issues
+    Source Code = https://github.com/domdfcoding/domplotlib
 classifiers =
     License :: OSI Approved :: MIT License
     Operating System :: OS Independent
