--- a/tests/requirements.txt
+++ b/tests/requirements.txt
@@ -2,6 +2,7 @@ coverage>=5.1
 coverage-pyver-pragma>=0.0.6
 domdf-python-tools[testing]>=2.0.1
 iniconfig!=1.1.0,>=1.0.1
+matplotlib==3.2.2; platform_machine == "aarch64" and python_version == "3.6"
 pytest>=6.0.0
 pytest-cov>=2.8.1
 pytest-mpl>=0.11
