--- a/setup.cfg
+++ b/setup.cfg
@@ -21,6 +21,9 @@ project_urls =
     Issue Tracker = https://github.com/domdfcoding/domplotlib/issues
     Source Code = https://github.com/domdfcoding/domplotlib
 classifiers =
+    Development Status :: 4 - Beta
+    Framework :: Matplotlib
+    Intended Audience :: Developers
     License :: OSI Approved :: MIT License
     Operating System :: OS Independent
     Programming Language :: Python
@@ -30,6 +33,7 @@ classifiers =
     Programming Language :: Python :: 3.8
     Programming Language :: Python :: 3.9
     Programming Language :: Python :: Implementation :: CPython
+    Topic :: Software Development :: Libraries :: Python Modules
 
 [options]
 python_requires = >=3.6.1
