--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+cawdrey>=0.3.0
 domdf-python-tools>=1.7.0
 matplotlib>=3.2.2; platform_machine != "aarch64" or python_version > "3.6"
 matplotlib==3.2.2; platform_machine == "aarch64" and python_version == "3.6"
