--- a/tox.ini
+++ b/tox.ini
@@ -29,7 +29,9 @@ qa = mypy, lint
 cov = py36, coverage
 
 [testenv]
-setenv = PYTHONDEVMODE = 1
+setenv =
+    PYTHONDEVMODE = 1
+    PYTEST_DEBUG = 1
 deps = -r{toxinidir}/tests/requirements.txt
 commands =
     python --version
