--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -54,11 +54,12 @@ repos:
     - id: rst-inline-touching-normal
 
  - repo: https://github.com/asottile/pyupgrade
-   rev: v2.7.4
+   rev: v2.9.0
    hooks:
     - id: pyupgrade
       args:
        - --py36-plus
+       - --keep-runtime-typing
 
  - repo: https://github.com/Lucas-C/pre-commit-hooks
    rev: v1.1.9
