--- a/repo_helper.yml
+++ b/repo_helper.yml
@@ -10,6 +10,7 @@ license: 'MIT'
 short_desc: 'Dom''s extensions to matplotlib'
 
 enable_conda: false
+use_whey: True
 sphinx_html_theme: furo
 
 python_versions:
