Increase minimum coverage to 88%

--- a/repo_helper.yml
+++ b/repo_helper.yml
@@ -12,6 +12,7 @@ short_desc: 'Dom''s extensions to matplotlib'
 enable_conda: false
 use_whey: True
 sphinx_html_theme: furo
+min_coverage: 88
 
 python_versions:
   - 3.6
@@ -30,9 +31,6 @@ manifest_additional:
 
 tox_unmanaged:
   - pytest
-
-tox_requirements:
-  - "tox-pip-version>=0.0.7"
 
 classifiers:
  - 'Development Status :: 4 - Beta'
